--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,13 @@
 *.out
 
 # Images
-*.png
-*.jpeg
-*.jpg
-*.bmp
+**/images/upload/*.png
+**/images/upload/*.jpeg
+**/images/upload/*.jpg
+**/images/upload/*.bmp
+
+#StyleLint and Node
+*/package.json
+*/node_modules
+*/package-lock.json
+*/.stylelintrc.json
